--- a/google-homepage.html
+++ b/google-homepage.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
+<link href="reset.css" rel="stylesheet">
+<link href="main.css" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
 <html>
     <body>
-        
+        <div class="google-heading">
+            <div id="G">G</div>
+            <div id="O">o</div>
+            <div id="o">o</div>
+            <div id="g">g</div>
+            <div id="L">l</div>
+            <div id="E">e</div>
+        </div>
     </body>
 </html>
